--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ python-dotenv==1.0.0
 
 # Para manejo avanzado de pools de conexión (opcional)
 psycopg2-pool==1.1
+
+# Para generacion de reportes Excel (comparar_esquemas.py)
+openpyxl==3.1.2
